Update moon pages.

--- a/_posts/1995-01-05-moon95a.md
+++ b/_posts/1995-01-05-moon95a.md
@@ -18,6 +18,10 @@ issn: 2640-3498
 id: moon95a
 month: 0
 tex_title: Modeling Life Time Data by Neural Networks
+firstpage: 396
+lastpage: 402
+page: 396-402
+order: 396
 cycles: false
 bibtex_author: Moon, Young B. and Kim, Hyune-Ju
 author:
