--- a/aistats95.bib
+++ b/aistats95.bib
@@ -976,7 +976,7 @@ So here we have a complex web of unknown causal mechanisms, disagreement among e
   OPTvolume = 	 {},
   OPTnumber = 	 {},
   OPTseries = 	 {},
-  OPTpages = 	 {396--402},
+  pages =	 {396--402},
   OPTmonth = 	 {},
   OPTaddress = 	 {},
   OPTorganization = {},
