Update and rename 1995-01-05-representation95a.md to 1995-01-05-young95a.md

--- a/_posts/1995-01-05-young95a.md
+++ b/_posts/1995-01-05-young95a.md
@@ -1,5 +1,6 @@
 ---
-title: Forrest W. Young and David J. Lubinsky
+title: "Learning from Data by Guiding the Analyst: On the Representation,
+  Use and Creation of Visual Statistical Strategies"
 abstract: 'The concept of statistical strategy is introduced and used to develop a
   structured graphical user interface for guiding data analysts so that they can learn
   about the structure of their data. The interface visually represents statistical
@@ -25,21 +26,19 @@ publisher: PMLR
 issn: 2640-3498
 id: representation95a
 month: 0
-tex_title: Forrest W. Young and David J. Lubinsky
+tex_title: "Learning from Data by Guiding the Analyst: On the Representation,
+  Use and Creation of Visual Statistical Strategies"
 firstpage: 531
 lastpage: 539
 page: 531-539
 order: 531
 cycles: false
-bibtex_author: 'Learning from Data by Guiding the Analyst: On the Representation,
-  Use and of Visual Statistical Strategies, Creation'
+bibtex_author: 'Young, Forrest W. and Lubinsky, David J.'
 author:
-- given: Use
-  family: Representation
-  prefix: 'Learning from Data by Guiding the Analyst: On the'
-- given: Creation
-  family: Visual Statistical Strategies
-  prefix: of
+- given: Forrest W.
+  family: Young
+- given: David J.
+  family: Lubinsky
 date: 1995-01-05
 note: Reissued by PMLR on 01 May 2022.
 address:
@@ -52,7 +51,7 @@ issued:
   - 1995
   - 1
   - 5
-pdf: https://proceedings.mlr.press/r0/representation95a/representation95a.pdf
+pdf: https://proceedings.mlr.press/r0/young95a/young95a.pdf
 extras: []
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
