--- a/_posts/1995-01-05-neufeld95a.md
+++ b/_posts/1995-01-05-neufeld95a.md
@@ -25,10 +25,12 @@ lastpage: 416
 page: 410-416
 order: 410
 cycles: false
-bibtex_author: Adams, Eric Neufeld Greg and Choy, Henry and Orthner, Ron and Philip,
+bibtex_author: Neufeld, Eric and Adams, Greg and Choy, Henry and Orthner, Ron and Philip,
   Tim and Tawfik, Ahmed
 author:
-- given: Eric Neufeld Greg
+- given: Eric 
+  family: Neufeld 
+- given: Greg
   family: Adams
 - given: Henry
   family: Choy
@@ -50,7 +52,7 @@ issued:
   - 1995
   - 1
   - 5
-pdf: https://proceedings.mlr.press/r0/adams95a/adams95a.pdf
+pdf: https://proceedings.mlr.press/r0/neufeld95a/neufeld95a.pdf
 extras: []
 # Format based on citeproc: http://blog.martinfenner.org/2013/07/30/citeproc-yaml-for-bibliographies/
 ---
